Updated bibliography for second lit review.

--- a/proposal.tex
+++ b/proposal.tex
@@ -51,5 +51,8 @@ If time permits, we would also include:
     \item Comparisons with real cases
 \end{itemize}
 
+\bibliographystyle{ieeetr}
+\bibliography{final_project}
+
 
 \end{document}
