Before initial submission

--- a/main.tex
+++ b/main.tex
@@ -126,21 +126,21 @@ Our \ro values followed the pattern we expected. In our model, \ro is determined
 \begin{figure}[t]
     \centering
     \includegraphics[scale=0.5]{images/est_r0_er.png}
-    \caption{Estimated \ro values with an Erdos-Renyi contact network}
+    \caption{Estimated \ro values with an Erdos-Renyi contact network. Horizontal lines mark $R_0$ values in the range given for measles in the literature (12-18)}
     \label{fig:r0_er}
 \end{figure}
 
 \begin{figure}[t]
     \centering
     \includegraphics[scale=0.5]{images/est_ro_ba.png}
-    \caption{Estimated \ro values with a Barabasi-Albert contact network}
+    \caption{Estimated \ro values with a Barabasi-Albert contact network.}
     \label{fig:r0_ba}
 \end{figure}
 
 \begin{figure}[t]
     \centering
     \includegraphics[scale=0.5]{images/est_r0_ws.png}
-    \caption{Estimated \ro values with a Watts-Strogatz contact network}
+    \caption{Estimated \ro values with a Watts-Strogatz contact network.}
     \label{fig:r0_ws}
 \end{figure}
 
