Removed ratio from formulation and description of model. These were part of the old model and were removed.

--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@ We propose a model that combine the information diffusion model [SIR]by adding n
 S: susceptible  E: exposed  I : infected  R: recovered\\
 We define transition between compartment by a threshold transition (TT) and has a value 0 or 1:
 \begin{align*}
-    \text{Threshold transition}(TT) &= \frac{\tau_{i}}{X}\\
+    %\text{Threshold transition}(TT) &= \frac{\tau_{i}}{X}\\
     \text{Threshold transition}(TT^{I}) &=%
     \begin{cases}
     1 &\text{if } \tau_{i}^{I} \geq X_{I}\\
@@ -83,7 +83,7 @@ where $\tau_{i}$ is the period of node i stayed in the compartment and X is the 
 Death rate from I- R  due to disease 0.2\%
 \subsection{Formulation}
 \begin{align*}
-    \text{Threshold transition}(TT) &= \frac{\tau_{i}}{X}\\
+    %\text{Threshold transition}(TT) &= \frac{\tau_{i}}{X}\\
     \text{Threshold transition from E-I}(TT^{I}) &=%
     \begin{cases}
     1 &\text{if } \tau_{i}^{I} \geq X_{I}\\
